<resources>
    <string name="app_name">NewsAppPlus</string>
    <string name="title">Title</string>
    <string name="category_name">Category Name</string>
    <string name="date_published">Date Published</string>
    <string name="error_finding_news">Error finding news! Make sure your internet connection
    is stable!</string>
    <string name="author">Author</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>
    <string name="settings_article_count_label">Select Desired Article Count</string>
    <string name="settings_article_count_key" translatable="false">article_count_key</string>
    <string name="settings_article_count_default" translatable="false">10</string>

    <!-- Strings for desired news section option [CHAR LIMIT=30] -->
    <string name="settings_choose_news_section_label">Select Desired News Section</string>
    <string name="settings_choose_news_section_key" translatable="false">news_section_key</string>
    <string name="settings_choose_news_section_default" translatable="false">@string/settings_choose_politics_section_value</string>

    <!-- Label for politics news section option [CHAR LIMIT=20] -->
    <string name="settings_choose_politics_section_label">Politics</string>
    <string name="settings_choose_politics_section_value" translatable="false">politics</string>

    <!-- Label for science news section option [CHAR LIMIT=20] -->
    <string name="settings_choose_science_section_label">Science</string>
    <string name="settings_choose_science_section_value" translatable="false">science</string>
</resources>
