<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_article_count_default"
        android:inputType="number"
        android:key="@string/settings_article_count_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_article_count_label" />

    <ListPreference
        android:defaultValue="@string/settings_choose_news_section_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_choose_news_section_key"
        android:title="@string/settings_choose_news_section_label" />

</PreferenceScreen>